<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">软考宝典</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="toast_no_network">无网络</string>

    <!-- Activity Title -->
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_update">系统更新</string>
    <string name="title_activity_forgot_password">找回密码</string>
    <string name="title_activity_complete_account">完善帐号</string>
    <string name="title_activity_main">软酷考试</string>
    <string name="title_activity_qa">在线答疑</string>
    <string name="title_activity_main_menu">软酷考典</string>
    <string name="title_activity_main_learning">学习中心</string>
    <string name="title_ijkplayer">视频解析</string>
    <string name="title_course">视频解析课程</string>
    <string name="title_activity_exam">模拟考试</string>
    <string name="skip">跳过</string>
    <string name="done">立刻启程</string>
    <!-- 登录模块 -->
    <string name="btn_forget_password">忘记密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">用户注册</string>
    <string name="waiting">请稍等...</string>
    <string name="third_account_login">使用第三方账户登录</string>
    <string name="account">用户名</string>
    <string name="hint_account">请输入用户名</string>
    <string name="password">密码</string>
    <string name="hint_reset_password">重置密码</string>
    <string name="password_again">请再次输入密码</string>
    <string name="progress_msg_login">正在登录中…</string>
    <string name="toast_login_failure">用户名或密码错误，请检查</string>
    <string name="toast_login_no_user">不存在该用户名</string>
    <string name="toast_network_down">您与服务器的网络通道已被外星人占领，请稍后再试！</string>
    <string name="tip_update_error">更新出现异常,请检查网络状态是否良好</string>
    <string name="tip_not_updata">需要使用最新版本才能进入系统</string>
    <string name="error_account">请输入手机号码</string>
    <string name="error_password">请输入密码</string>

    <string name="mobile">手机号码</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="regist_email">邮箱</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="security_code">验证码</string>
    <string name="hint_security_code">输入验证码</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="hint_set_password">请输入密码</string>
    <string name="progress_msg_update_password">正在更新密码...</string>
    <string name="btn_submit">提交</string>
    <string name="tv_protocol">《用户使用协议》</string>
    <string name="error_name_blank">请输入用户名</string>
    <string name="error_mobile_blank">请输入手机号码</string>
    <string name="error_mobile_incorrect">手机号码格式不正确</string>
    <string name="error_security_code_blank">请输入验证码</string>
    <string name="error_email_blank">请输入邮箱地址</string>
    <string name="error_password_blank">请输入密码</string>
    <string name="error_password_diff">请输入相同的密码</string>
    <string name="error_password_length">请输入6~12位的密码</string>
    <string name="error_password_not_match">密码不一致</string>
    <string name="progress_msg_register">正在注册中…</string>
    <string name="toast_mobile_registered">失败原因：该手机号已注册，请登录</string>

    <string name="tip_register_success">注册成功</string>
    <string name="progress_msg_send_security_code">正在发送验证码…</string>
    <string name="toast_security_code_incorrect">输入的验证码不正确</string>
    <string name="security_code_send_error">发送验证码失败</string>
    <string name="toast_password_update_success">密码更新成功</string>
    <string name="toast_security_code_send_success">验证码发送成功</string>
    <string name="btn_get_code_after_seconds_is"><xliff:g>%d</xliff:g>秒后重新获取</string>

    <!--系统 -->
    <string name="system_exception_tip">天啊~服务器开小差了</string>
    <string name="system_exception_tip2">您等一会再来吧！</string>

    <!--exam -->
    <string name="exam_subjects_select">选择考试科目</string>
    <string name="btn_sign_up_info">报名时间已截止</string>
    <string name="exam_subjects_select_type">选择考试科目类型</string>
    <string name="exam_papers_select">请选择试卷</string>
    <string name="exam_paper_null">未选择试卷</string>
    <string name="exam_subject_paper_null">该科目下暂无试卷</string>
    <string name="exam_subject_null">未选择科目</string>
    <string name="getting_paper">正在获取试题，请稍等...</string>
    <string name="getting_analysis">正在获取试题解析，请稍等...</string>
    <string name="getting_registration">正在获取软考报名信息，请稍等...</string>
    <string name="exam_timer"><xliff:g>%d</xliff:g>分<xliff:g>%d</xliff:g>秒</string>
    <string name="exam_sheet">答题卡</string>
    <string name="submit">提交</string>
    <string name="exam_result_tip">本次考试满分为<xliff:g>%1$3.1f</xliff:g>分，及格分数为<xliff:g>%2$d</xliff:g>分</string>
    <string name="exam_result_score"><xliff:g>%1$3.1f</xliff:g>分</string>

    <!--用户个人中心-->
    <string name="title_activity_personal_info_center">个人中心</string>
    <string name="title_activity_personal_info">个人信息</string>
    <string name="title_activity_exam_history">考试历史</string>
    <string name="title_activity_soft_exam_info">软考资讯</string>
    <string name="title_activity_personal_change_password">修改密码</string>
    <string name="title_activity_personal_order_record">订单记录</string>
    <string name="title_activity_video">真题视频解析</string>
    <string name="title_activity_videoclass">软考包过班</string>
    <string name="analysis">正确答案：<xliff:g>%1$s</xliff:g>
        \n考点：<xliff:g>%2$s</xliff:g>
        \n试题解析：<xliff:g>%3$s</xliff:g>
    </string>

    <string name="pay_remark">支费标准如下：
        \n高级资格（报名费210元/人）：信息系统项目管理师、系统分析师、系统架构设计师、网络规划设计师。
        \n中级资格（报名费140元/人）：软件评测师、软件设计师、网络工程师、多媒体应用设计师、嵌入式设计师、电子商务设计师、系统集成项目管理工程师、信息系统监理师、数据库系统工程师、信息安全工程师、信息系统管理工程师。
        \n初级资格（报名费140元/人）：程序员、网络管理员；信息处理技术员（170元）
    </string>
    <string name="tip_pay_success">支付成功</string>
    <string name="tip_pay_confirm">支付结果确认中</string>
    <string name="tip_pay_fail">支付失败</string>
    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_success_info">尊敬的用户您好！
        \n\u0020\u0020为了能尽快在软考办报名成功，请补充您的个人报名信息，在信息补充完成之后，您的个人报名申请将
        立即提交到软考办，我们的工作人员也会电话联系您，与您核对报名信息。
        \n\u0020\u0020在报名详情里可以随时查看您的报名进度。
    </string>

    <string name="photo_info">
        1、照片宽与高的比例为2:3；宽不小于140像素、高不小于210像素；
        \n2、照片底色须为蓝色、红色或白色；
        \n3、照片须为*.jpg格式(jpg为小写字母)；
        \n4、照片文件容量大小不大于100KB；
        \n5、须为显示近期、免冠、正面的证照相；
        \n6、成像须自然、清晰。不可由低尺寸（低分辨率）照片拉大；不可由其它照片"扣图"粘贴；
        \n7、头部高度占照片高度的比例不低于1/2；
        \n8、长刘海或长发者须整理好头发勿遮挡五官。
    </string>

    <string-array name="province">
        <item>省/直辖市/自治区</item>
    </string-array>
    <string-array name="city">
        <item>地级市/地区/自治州</item>
    </string-array>
    <string-array name="county">
        <item>县级市/市辖区</item>
    </string-array>

    <!--证件类型-->
    <string-array name="idcard_type">
        <item>身份证</item>
        <item>军官证</item>
        <item>港澳台居民或外籍人士护照</item>
    </string-array>
    <!--最高学历-->
    <string-array name="max_edu_bg">
        <item>博士研究生以上</item>
        <item>博士研究生</item>
        <item>硕士研究生</item>
        <item>本科</item>
        <item>专科</item>
        <item>高中中专</item>
        <item>其他</item>
    </string-array>
    <!--最高学位-->
    <string-array name="max_edu_level">
        <item>博士</item>
        <item>硕士</item>
        <item>学士</item>
        <item>其他</item>
    </string-array>
    <!--单位类别-->
    <string-array name="administrative_unit_type">
        <item>政府机关</item>
        <item>国有事业单位</item>
        <item>国有企业单位</item>
        <item>军队</item>
        <item>私营企业/民营企业</item>
        <item>私营个体</item>
        <item>幼儿园/中小学/中职</item>
        <item>高校/高职/科研院所</item>
        <item>医院</item>
        <item>中外/港澳台合作企业</item>
        <item>外资企业</item>
        <item>社会团体</item>
        <item>非盈利性组织</item>
        <item>外国驻华机构</item>
        <item>其他</item>
    </string-array>
    <!--已有职称-->
    <string-array name="job_title">
        <item>高级</item>
        <item>中级</item>
        <item>低级</item>
        <item>无</item>
    </string-array>
    <!--通信地址类别-->
    <string-array name="cantact_address_type">
        <item>工作单位</item>
        <item>学校地址</item>
        <item>家庭地址</item>
    </string-array>
</resources>
