<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.itee.exam.app.ui.login.RegisterActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tvName"
                    android:ems="10"
                    android:hint="@string/hint_account"
                    android:inputType="text"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <EditText
                    android:id="@+id/etTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/tvPhone"
                    android:ems="10"
                    android:hint="@string/hint_mobile"
                    android:inputType="phone"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvCheckNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/security_code"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <EditText
                    android:id="@+id/etSecurityCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvCheckNum"
                    android:layout_toLeftOf="@+id/btnGetCode"
                    android:ems="10"
                    android:hint="@string/hint_security_code"
                    android:inputType="number"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />

                <TextView
                    android:id="@+id/btnGetCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etSecurityCode"
                    android:layout_alignParentRight="true"
                    android:layout_margin="7dp"
                    android:background="@color/accent"
                    android:clickable="true"
                    android:padding="7dp"
                    android:text="@string/btn_get_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_font" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/regist_email"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvEmail"
                    android:ems="16"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:lineSpacingMultiplier="1.2"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/password"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <com.itee.exam.app.widget.ContainsEmojiEditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvPassword"
                    android:ems="10"
                    android:hint="@string/hint_set_password"
                    android:inputType="textPassword"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />

                <TextView
                    android:id="@+id/tvPasswordAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etPassword"
                    android:layout_marginTop="5dp"
                    android:text="@string/password_again"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/normal_font" />

                <com.itee.exam.app.widget.ContainsEmojiEditText
                    android:id="@+id/etPasswordAgain"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvPasswordAgain"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/hint_set_password"
                    android:inputType="textPassword"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/etPassword"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/cbProtocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:id="@+id/tvProtocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/tv_protocol"
                    android:textColor="@color/normal_font"
                    android:textSize="@dimen/normal_font" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout"
                android:layout_marginTop="15dp"
                android:background="@drawable/light_btn"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:textSize="@dimen/title_font" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>