<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.itee.exam.app.ui.login.ForgotPasswordActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="11"
                android:text="@string/mobile"
                android:textColor="@color/accent"
                android:textSize="@dimen/normal_font" />

            <EditText
                android:id="@+id/etTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvPhone"
                android:ems="10"
                android:hint="@string/hint_mobile"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/normal_font"
                android:textSize="@dimen/normal_font" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCheckNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/security_code"
                android:textColor="@color/accent"
                android:textSize="@dimen/normal_font" />

            <EditText
                android:id="@+id/etSecurityCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvCheckNum"
                android:layout_toLeftOf="@+id/btnGetCode"
                android:ems="10"
                android:hint="@string/hint_security_code"
                android:inputType="number"
                android:lineSpacingMultiplier="1.2"
                android:maxLength="4"
                android:singleLine="true"
                android:textColor="@color/normal_font"
                android:textSize="@dimen/normal_font" />

            <TextView
                android:id="@+id/btnGetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/etSecurityCode"
                android:layout_alignParentRight="true"
                android:layout_margin="7dp"
                android:background="@color/accent"
                android:clickable="true"
                android:padding="7dp"
                android:text="@string/btn_get_code"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_font" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/accent"
                android:textSize="@dimen/normal_font" />

            <com.itee.exam.app.widget.ContainsEmojiEditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvPassword"
                android:ems="10"
                android:hint="@string/hint_reset_password"
                android:inputType="textPassword"
                android:lineSpacingMultiplier="1.2"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/normal_font"
                android:textSize="@dimen/normal_font" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="确认密码"
                android:textColor="@color/accent"
                android:textSize="@dimen/normal_font" />

            <com.itee.exam.app.widget.ContainsEmojiEditText
                android:id="@+id/etRePassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvRePassword"
                android:ems="10"
                android:hint="请再次输入新密码"
                android:inputType="textPassword"
                android:lineSpacingMultiplier="1.2"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/normal_font"
                android:textSize="@dimen/normal_font" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/light_btn"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/btn_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font" />
    </LinearLayout>

</LinearLayout>