<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_vertical"
    tools:context="com.itee.exam.app.ui.login.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="55dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/input_bg"
                android:padding="5dp"
                android:drawableLeft="@drawable/login_user_ico"
                android:drawablePadding="10dp"
                android:hint="@string/hint_account"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/white_cursor"
                android:singleLine="true"
                android:textSize="@dimen/title_font" />

            <com.itee.exam.app.widget.ContainsEmojiEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:padding="5dp"
                android:background="@color/input_bg"
                android:drawableLeft="@drawable/login_password_ico"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/white_cursor"
                android:singleLine="true"
                android:textSize="@dimen/title_font" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/light_btn"
            android:onClick="onLoginClick"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font" />

        <TextView
            android:id="@+id/btnForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogin"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:onClick="onForgetPasswordClick"
            android:text="@string/btn_forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/buttonLogin"
            android:layout_below="@+id/buttonLogin"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onRegisterClick"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_font" />

        <!--<TextView-->
            <!--android:id="@+id/textViewThird"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@+id/btnForget"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:text="@string/third_account_login"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/title_font" />-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.25dp"-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:layout_below="@+id/textViewThird"-->
            <!--android:background="@color/white"/>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/textViewThird"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:id="@+id/im_wechat"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:onClick="onWechatClick"-->
                <!--android:src="@drawable/weixin_btn" />-->

            <!--<ImageView-->
                <!--android:id="@+id/im_qq"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:onClick="onQQClick"-->
                <!--android:src="@drawable/qq_btn" />-->

            <!--<ImageView-->
                <!--android:id="@+id/im_weibo"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:onClick="onWeiboClick"-->
                <!--android:src="@drawable/weibo_btn" />-->
        <!--</LinearLayout>-->
    </RelativeLayout>

</LinearLayout>